crates/state/tests/snapshots/state_foundation__project_env_observed_status_and_warnings_round_trip.snap
---
source: crates/state/tests/state_foundation.rs
expression: "(pending, warning_state, failed, after_invalid_warning)"
---
(
    ProjectEnvObservedStateRecord {
        project_id: "<project_id>",
        status: Pending,
        message: None,
        observed_at: "<timestamp>",
        warnings: [],
    },
    ProjectEnvObservedStateRecord {
        project_id: "<project_id>",
        status: Warning,
        message: Some(
            "rendered with warnings",
        ),
        observed_at: "<timestamp>",
        warnings: [
            ProjectEnvObservedWarningRecord {
                project_id: "<project_id>",
                kind: "duplicate_key",
                message: "APP_URL already exists outside the PV block",
                observed_at: "<timestamp>",
            },
            ProjectEnvObservedWarningRecord {
                project_id: "<project_id>",
                kind: "duplicate_key",
                message: "DATABASE_URL already exists outside the PV block",
                observed_at: "<timestamp>",
            },
        ],
    },
    ProjectEnvObservedStateRecord {
        project_id: "<project_id>",
        status: Failed,
        message: Some(
            "render failed",
        ),
        observed_at: "<timestamp>",
        warnings: [],
    },
    Some(
        ProjectEnvObservedStateRecord {
            project_id: "<project_id>",
            status: Failed,
            message: Some(
                "render failed",
            ),
            observed_at: "<timestamp>",
            warnings: [],
        },
    ),
)
