crates/state/tests/snapshots/state_foundation__projects_demanding_managed_resource_track_are_selected_exactly.snap
---
source: crates/state/tests/state_foundation.rs
expression: selected_projects
---
[
    (
        "acme",
        Some(
            "acme.test",
        ),
    ),
    (
        "beta",
        Some(
            "beta.test",
        ),
    ),
]
