crates/state/tests/snapshots/state_foundation__resource_allocations_preserve_generated_names_and_env_context.snap
---
source: crates/state/tests/state_foundation.rs
expression: "(created, ready, context, removed, after_removal, readded)"
---
(
    [
        ResourceAllocationRecord {
            id: "allocation_000001",
            project_id: "<project_id>",
            resource_name: "mysql",
            track: "8.0",
            allocation_name: "app-db",
            generated_name: "acme_test_app_db",
            env: {},
            status: Desired,
            created_at: "<timestamp>",
            updated_at: "<timestamp>",
        },
    ],
    ResourceAllocationRecord {
        id: "allocation_000001",
        project_id: "<project_id>",
        resource_name: "mysql",
        track: "8.0",
        allocation_name: "app-db",
        generated_name: "acme_test_app_db",
        env: {
            "database": "acme_test_app_db",
        },
        status: Ready,
        created_at: "<timestamp>",
        updated_at: "<timestamp>",
    },
    ProjectEnvStateContext {
        project_id: "<project_id>",
        primary_hostname: Some(
            "acme.test",
        ),
        resources: {
            "mysql": ProjectEnvResourceContext {
                track: "8.0",
                values: {
                    "host": "127.0.0.1",
                    "password": "secret",
                    "port": "3306",
                    "username": "root",
                },
                allocations: {
                    "app-db": ProjectEnvAllocationContext {
                        generated_name: "acme_test_app_db",
                        values: {
                            "database": "acme_test_app_db",
                        },
                    },
                },
            },
        },
    },
    [],
    [
        ResourceAllocationRecord {
            id: "allocation_000001",
            project_id: "<project_id>",
            resource_name: "mysql",
            track: "8.0",
            allocation_name: "app-db",
            generated_name: "acme_test_app_db",
            env: {
                "database": "acme_test_app_db",
            },
            status: Inactive,
            created_at: "<timestamp>",
            updated_at: "<timestamp>",
        },
    ],
    [
        ResourceAllocationRecord {
            id: "allocation_000001",
            project_id: "<project_id>",
            resource_name: "mysql",
            track: "8.0",
            allocation_name: "app-db",
            generated_name: "acme_test_app_db",
            env: {
                "database": "acme_test_app_db",
            },
            status: Desired,
            created_at: "<timestamp>",
            updated_at: "<timestamp>",
        },
    ],
)
