crates/state/tests/snapshots/state_foundation__resource_allocations_reject_duplicate_generated_names_per_resource_track.snap
---
source: crates/state/tests/state_foundation.rs
assertion_line: 282
expression: "state::testing::query_i64(&database,\n\"SELECT COUNT(*) FROM resource_allocations\")?"
---
1
