crates/state/tests/snapshots/state_foundation__resource_port_allocator_distinguishes_named_ports_for_one_track.snap
---
source: crates/state/tests/state_foundation.rs
expression: "(assigned_smtp, assigned_dashboard, reused_smtp, released_dashboard,\ndatabase.assigned_ports()?,)"
---
(
    PortAssignment {
        owner: Resource {
            name: "mailpit",
            track: "1.0",
            port: "smtp",
        },
        port: 1025,
        updated_at: "<timestamp>",
    },
    PortAssignment {
        owner: Resource {
            name: "mailpit",
            track: "1.0",
            port: "dashboard",
        },
        port: 8025,
        updated_at: "<timestamp>",
    },
    PortAssignment {
        owner: Resource {
            name: "mailpit",
            track: "1.0",
            port: "smtp",
        },
        port: 1025,
        updated_at: "<timestamp>",
    },
    true,
    [
        PortAssignment {
            owner: Resource {
                name: "mailpit",
                track: "1.0",
                port: "smtp",
            },
            port: 1025,
            updated_at: "<timestamp>",
        },
    ],
)
