crates/state/tests/snapshots/state_foundation__runtime_observed_state_round_trips_through_observed_states.snap
---
source: crates/state/tests/state_foundation.rs
assertion_line: 1773
expression: database.runtime_observed_states()?
---
[
    RuntimeObservedStateRecord {
        subject: PhpRuntimeWorker {
            php_runtime_key: "8.4+redis",
        },
        status: Running,
        message: Some(
            "extension worker is ready",
        ),
        observed_at: "<timestamp>",
    },
    RuntimeObservedStateRecord {
        subject: Gateway,
        status: Degraded,
        message: Some(
            "gateway config reload failed",
        ),
        observed_at: "<timestamp>",
    },
    RuntimeObservedStateRecord {
        subject: PhpWorker {
            php_track: "8.4",
        },
        status: Failed,
        message: Some(
            "readiness timed out",
        ),
        observed_at: "<timestamp>",
    },
    RuntimeObservedStateRecord {
        subject: Resource {
            name: "mailpit",
            track: "1.0",
        },
        status: Running,
        message: Some(
            "mailpit is ready",
        ),
        observed_at: "<timestamp>",
    },
]
