crates/state/tests/snapshots/state_foundation__transactions_roll_back_when_the_operation_fails.snap
---
source: crates/state/tests/state_foundation.rs
expression: "database.query_i64(\"SELECT COUNT(*) FROM jobs\")?"
---
0
